REGRESSION (r256577): Previous page continues to display after navigating to media document https://bugs.webkit.org/show_bug.cgi?id=209630 <rdar://problem/60609318>

Reviewed by Simon Fraser.

Add a way for non-HTML documents to signal visually non-empty state (for example when media document constructs the controls for the media content.)

* html/FTPDirectoryDocument.cpp:
(WebCore::FTPDirectoryDocumentParser::appendEntry):
* html/MediaDocument.cpp:
(WebCore::MediaDocumentParser::createDocumentStructure):
* html/PluginDocument.cpp:
(WebCore::PluginDocumentParser::createDocumentStructure):
* page/FrameView.cpp:
(WebCore::FrameView::resetLayoutMilestones):
(WebCore::FrameView::checkAndDispatchDidReachVisuallyNonEmptyState):
* page/FrameView.h:


Canonical link: https://commits.webkit.org/222613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259148 268f45cc-cd09-0410-ab3c-d52691b4dbfc